# contextCLI

./: .gitignore  pyproject.toml  test.py  verify_sampler.py
data/: formats.py  sampler.py
docs/: architecture_preview.md  blueprint.md  decisions.md  full_desc.md  log.md  overview.md  project_spine.md
docs/layer_arch/: data_layer.md  full_desc
src/contextcliff/cli/: main.py
src/contextcliff/data/: formats.py  sampler.py
src/contextcliff/eval/: metrics.py
src/contextcliff/models/: client.py  openai_client.py
src/contextcliff/runner/: engine.py  state.py
